<resources>
    <string name="app_name">navi-app-thesis</string>
    <string name="date">date</string>
    <string name="focal_length">focal_length</string>
    <string name="enter_focal_length_in_mm">enter_focal_length_in_mm</string>
    <string name="sensor_height">sensor_height</string>
    <string name="enter_sensor_height_in_pixel">enter_sensor_height_in_pixel</string>
    <string name="sensor_width">sensor_width</string>
    <string name="enter_sensor_width_in_pixel">enter_sensor_width_in_pixel</string>
    <string name="save">save</string>
    <string name="start">start</string>
    <string name="overlay_app">overlay_app</string>
    <string name="navi_app">Navi_app</string>
</resources>